# resolve-ai

./: .env.example  .gitignore  Dockerfile  README.md  chaos_demo.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
agents/: compliance_guard.py  llm_engine.py  negotiation_strategy.py  policy_engine.py  profile_loader.py  responder.py  tool_actions.py
api/: app.py
chaos/: fault_injection.py
docs/: DEPLOYMENT.md  architecture.md
domain/: borrower.py  channel_router.py  channels.py  models.py
evals/: borrower_simulator.py  datasets.py  experiment_runner.py  red_team.py  run_eval.py  simulation_runner.py
infra/: db.py  observability.py  queue.py  scheduler.py  settings.py
ops-console/: package-lock.json  package.json  tsconfig.tsbuildinfo
scripts/: build_retraining_dataset.py  regression_gate.py  run_incident_mode.py  run_learning_cycle.py  run_real_situations.py  run_redteam_runtime.py  run_worker.py  seed_demo_data.py
tests/: test_api_contracts.py  test_borrower_profile.py  test_channel_router.py  test_channels_and_tools.py  test_chaos.py  test_core.py  test_evals.py  test_guardrails_and_timeout.py  test_integration_services.py  test_learning_endpoints.py  test_learning_loop.py  test_llm_providers.py  test_llm_runtime_settings.py  test_negotiation_strategy.py  test_observability_and_feedback.py  test_prompt_evals.py  test_queue.py  test_queue_ingest_api.py  test_queue_worker.py  test_recovery_and_replay.py  test_reliability_upgrade.py  test_replay_consistency.py  test_responder.py  test_retraining_pipeline.py  test_scheduler.py  (+2 more)
(+55 files in other folders)
