[project]
name = "durable-negotiation-agent"
version = "0.1.0"
description = "Infra-first durable AI workflow for financial negotiation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "greenlet>=3.0",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "redis>=5.0",
  "httpx>=0.27",
  "prometheus-client>=0.20",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = ["."]
